--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@distube/ytdl-core": "^4.16.6",
     "axios": "^1.6.0",
     "next": "^15.2.4",
-    "puppeteer": "^24.6.1",
+    "playwright-chromium": "^1.51.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.13.0",
