--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-player": "^2.13.0",
     "recharts": "^2.9.0",
     "sentiment": "^5.0.2",
-    "youtube-dl-exec": "^3.0.20"
+    "youtubei.js": "^13.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
